--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+source 'https://github.com/combateafraude/iOS.git'
+source 'https://cdn.cocoapods.org'
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -5,7 +8,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, 13.0
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -40,10 +43,12 @@ target 'cafbridge_faceauthenticator' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  pod 'FaceAuth', '~> 3.1.7'
 
   target 'cafbridge_faceauthenticatorTests' do
     inherit! :complete
